force-app/main/default/objects/AgentGov_Policy__mdt/AgentGov_Policy__mdt.object-meta.xml
<CustomObject>
    <description>Defines access control policies for AI agents operating in the org.</description>
    <label>AgentGov Policy</label>
    <pluralLabel>AgentGov Policies</pluralLabel>
</CustomObject>