force-app/main/default/objects/AgentGov_Policy__mdt/fields/Agent_Type__c.field-meta.xml
<CustomField>
    <fullName>Agent_Type__c</fullName>
    <description>Agent type this policy applies to: the value stored on registrations (Agentforce, MCP_External, Custom_Apex, Flow_Based) or the label shown on records (Agentforce, MCP External, Custom Apex, Flow Based), in any letter case, or All for every type. Text that names no type matches no agent, and the console's Setup tab lists a blank or unknown type as a policy problem.</description>
    <label>Agent Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>