force-app/main/default/objects/AgentGov_Policy__mdt/fields/Field_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Field_Restrictions__c</fullName>
    <description>Comma-separated field API names that a Governed Proxy request matched by this allow policy may not use: a query that selects, filters or sorts on one, or a write that sets one, is refused rather than trimmed. Only the Governed Proxy checks them; Register Agent Action and /authorize do not.</description>
    <label>Field Restrictions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>