force-app/main/default/objects/AgentGov_Policy__mdt/fields/Is_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Is_Allowed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Allowed</label>
    <type>Checkbox</type>
</CustomField>