force-app/main/default/objects/AgentGov_Policy__mdt/fields/Max_Records_Per_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Max_Records_Per_Transaction__c</fullName>
    <description>Maximum records this agent type can process per transaction</description>
    <label>Max Records Per Transaction</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>