force-app/main/default/objects/AgentGov_Policy__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>Salesforce object API name (or "*" for all objects)</description>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>