force-app/main/default/objects/AgentGov_Policy__mdt/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <description>Operation this policy governs. One of Query, Create, Update, Delete, Upsert, API_Call, Flow_Trigger, or "*" for all. Read is not an operation; use Query.</description>
    <label>Operation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>